--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                 <li><a href="service.html">service</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Convfejknae</a></li>
+
               </ul>
             </div>
           </div>
