--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
       </div>
       <div class="col-md-6">
         <div class="Image_Header">
-          <img src="/assets/img/Pic1.png" alt="SEO">
+          <img src="./assets/img/SVGfile/Header_pic.svg" alt="SEO">
         </div>
       </div>
 
     </section>
+
     <!--====== Display Body 2 Start ======-->
 
     <section class="Section_two">
@@ -114,10 +115,10 @@
         <p>Our <span>Working Process</span></p>
       </div>
       <div class="Work_process">
-        <p>Planning</p><img src="/assets/img/Arrow.svg" alt="Arrow">
-        <p>Research</p><img src="/assets/img/Arrow.svg" alt="Arrow">
-        <p>Optimizing</p><img src="/assets/img/Arrow.svg" alt="Arrow">
-        <p>Analyzing</p><img src="/assets/img/Arrow.svg" alt="Arrow">
+        <p>Planning</p><img src="./assets/img/SVGfile/Arrow.svg" alt="Arrow">
+        <p>Research</p><img src="./assets/img/SVGfile/Arrow.svg" alt="Arrow">
+        <p>Optimizing</p><img src="./assets/img/SVGfile/Arrow.svg" alt="Arrow">
+        <p>Analyzing</p><img src="./assets/img/SVGfile/Arrow.svg" alt="Arrow">
         <p>Results</p>
       </div>
     </section>
@@ -130,22 +131,22 @@
         </div>
         <div class="Slide">
           <div class="img_arrow">
-            <img src="/assets/img/3994376_arrow_back_left_navigation_previous_icon.svg" alt="Arrow_left">
+            <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_left">
           </div>
-          <div class="card myCard">
+          <div class="myCard">
               <p>Real Time Analytics</p>
           </div>
-          <div class="card myCard">
+          <div class="myCard">
             <p>Online Marketing</p>
         </div>
-        <div class="card myCard">
+        <div class="myCard">
           <p>Email Marketing</p>
       </div>
-      <div class="card myCard">
+      <div class="myCard">
         <p>Social Media Marketing</p>
     </div>
     <div class="img_arrow send_arr">
-      <img src="/assets/img/3994376_arrow_back_left_navigation_previous_icon.svg" alt="Arrow_left">
+      <img class="svg_arrow" src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_left">
     </div>
         </div>
         <div class="Slide_content">
@@ -163,6 +164,10 @@
           </div>
 
     </section>
+
+     <!-- Section 4 start  -->
+
+
     <section class="Section_four">
       <div class="sec_for_title">
         <p>What <span>
@@ -173,32 +178,37 @@
       </div>
       <div class="Slider_two">
         <div class="img_arrow">
-          <img src="/assets/img/3994376_arrow_back_left_navigation_previous_icon.svg" alt="Arrow_left">
+          <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_left">
         </div>
         <div class="Card_details">
           <div class="Image_d_card">
-            <img src="/assets/img/SEU.png" alt="SEO">
+            <img src="./assets/img/SVGfile/Knowledge-base-part-3_what-is-seo-removebg-preview 1.svg" alt="SEO">
           </div>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda illo ut iste fuga eius non? Excepturi, commodi hic. Maiores, voluptas. Ab sit eligendi laboriosam porro accusamus, id quis nihil itaque.
         </div>
         <div class="Card_details">
           <div class="Image_d_card">
-            <img src="/assets/img/SEU.png" alt="SEO">
+            <img src="./assets/img/SVGfile/quant-data3-removebg-preview 1.svg" alt="SEO">
           </div>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda illo ut iste fuga eius non? Excepturi, commodi hic. Maiores, voluptas. Ab sit eligendi laboriosam porro accusamus, id quis nihil itaque.
         </div>
         <div class="Card_details">
           <div class="Image_d_card">
-            <img src="/assets/img/SEU.png" alt="SEO">
+            <img src="./assets/img/SVGfile/xi 1.svg" alt="SEO">
           </div>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda illo ut iste fuga eius non? Excepturi, commodi hic. Maiores, voluptas. Ab sit eligendi laboriosam porro accusamus, id quis nihil itaque.
         </div>
         <div class="img_arrow send_arr">
-          <img src="/assets/img/3994376_arrow_back_left_navigation_previous_icon.svg" alt="Arrow_Right">
+          <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_Right">
         </div>
       </div>
 
     </section>
+
+
+    <!-- Section five start  -->
+
+
     <section class="Section_five">
               <div class="secGrid">
           <div class="secFiveLeft">
@@ -206,14 +216,14 @@
             <span>Don’t Believe Me 
               Check Client Says </span>
               <div class="left-Section-Five-Img">
-                <img src="/assets/img/Pic2.png" alt="Pic2">
+                <img src="./assets/img/SVGfile/Client.svg" alt="Pic2">
               </div>
               <div class="img_slyde_btn">
-                <div class="left_slyder">
-                  <img src="/assets/img/3994376_arrow_back_left_navigation_previous_icon.svg" alt="Arrow_Right">
+                <div class="left_slyder img_arrow">
+                  <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_Right">
                 </div>
-                <div class="right_slyder">
-                  <img src="/assets/img/3994376_arrow_back_left_navigation_previous_icon.svg" alt="Arrow_Right">
+                <div class="right_slyder img_arrow">
+                  <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_Right">
                 </div>
               </div>
           </div>
@@ -226,6 +236,7 @@
                 fjaklsdjfioajmfasdk jas kmji am
                  jdfsk jmkasjdfiosifjsijfias njfusiojnf auindfkiamSfk ;lsad</p>
                  <span>
+                  <div class="star"></div>
                   <h2>Mohammad Madhu</h2> <br>
                     Product Desiner
                  </span>
@@ -303,7 +314,11 @@ professionals of unique internet projects
           </div>
          </svg>
          <div class="numberthrd_content number_three">
-          This is 
+          <h4>Ready To Go 
+            Beyond Always</h4> <br>
+            <p>As a digital marketing partner, We understand your
+              market and goals, rather than just an agency
+              that executes tactics instinctively.</p>
          </div>
       </div>
       <div class="forth_idea">
@@ -328,6 +343,9 @@ professionals of unique internet projects
       </div>
       
     </section>
+
+    <!-- section seven start -->
+
     <section class="Section_seven">
         <div class="seven_title">
             <p>WHAT CAN <span>PAGETRAFFIC DO</span>  FOR YOU
@@ -337,21 +355,50 @@ professionals of unique internet projects
 
           <div class="card_seven">
             <div class="card_seven_content">
-                This is konok
+                <div class="imga">
+                  <img src="./assets/img/SVGfile/Knowledge-base-part-3_what-is-seo-removebg-preview 1.svg" alt="SEO">
+                </div>
+                <h3>Social media</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit Exercitationem, quis?
+                </p>
             </div>
           </div>
           <div class="card_seven">
             <div class="card_seven_content">
-                This is konok
+                <div class="imga">
+                  <img src="./assets/img/SVGfile/Knowledge-base-part-3_what-is-seo-removebg-preview 1.svg" alt="SEO">
+                </div>
+                <h3>Social media</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit Exercitationem, quis?
+                </p>
             </div>
           </div>
           <div class="card_seven">
             <div class="card_seven_content">
-                This is konok
+                <div class="imga">
+                  <img src="./assets/img/SVGfile/Knowledge-base-part-3_what-is-seo-removebg-preview 1.svg" alt="SEO">
+                </div>
+                <h3>Social media</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit Exercitationem, quis?
+                </p>
             </div>
           </div>
         </div>
+        <div class="img_seven_sec">
+          <div class="left_slyder img_arrow">
+            <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_Right">
+          </div>
+          <div class="right_slyder img_arrow">
+            <img src="./assets/img/SVGfile/arrow_icon.svg" alt="Arrow_Right">
+          </div>
+        </div>
     </section>
+
+
+
     <section class="Section_eight">
         <div class="main_pic_sec_seven">
           <svg viewBox="0 0 1440 550" fill="none">
@@ -364,7 +411,12 @@ professionals of unique internet projects
             </defs>
             <div class="join_comunity">
               <div class="card_eight">
-                this is konok
+                <div class="imga">
+                  <img src="./assets/img/SVGfile/Knowledge-base-part-3_what-is-seo-removebg-preview 1.svg" alt="SEO">
+                </div>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit Exercitationem, quis?
+                </p>
               </div>
             </div>
             </svg>
